--- a/src/index.html
+++ b/src/index.html
@@ -5,70 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@600&family=Merienda+One&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="./styles/style.scss" />
+
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Coffee Heaven</title>
   </head>
   <body>
     <nav>
       <div class="nav">
         <div id="logo">
-          <img src="../images/logo.png" alt="logo" height="50px" />
+          <img src="../images/logo.png" alt="logo" />
         </div>
         <div class="navbar">
           <ul class="links">
-            <li class="home"><a href="#home">Home</a></li>
-            <li class="about"><a href="#about">About</a></li>
-            <li class="menu"><a href="#menu">Menu</a></li>
-            <li class="gallery"><a href="#gallery">Gallery</a></li>
-            <li class="team"><a href="#team">Team</a></li>
-            <li class="contact"><a href="#contact">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#menu">Menu</a></li>
+            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </div>
     </nav>
     <main>
       <header id="home">
-        <div class="header-background">
-          <img
-            src="../images/home-bg.jpg"
-            alt="header-background"
-            id="home-bg"
-            height="550px"
-          />
-        </div>
+        <!-- <img src="../images/home-bg.jpg" alt="header-background" id="home-bg" /> -->
         <div class="home-text">
-          <h2>Coffee Heaven</h2>
+          <h1>Coffee Heaven</h1>
           <p>
             At ut frappuccino sugar robust, aged coffee filter acerbic macchiato
             body. Ut eu, that skinny, french press, shop coffee mocha fair trade
             bar percolator shop.
           </p>
-          <button id="about-btn">About us</button>
+          <button class="btn" id="about-btn">About us</button>
         </div>
       </header>
 
       <section id="about">
         <div id="about-text">
-          <h3>Best way to kickstart your day is with a cup of coffee</h3>
+          <h2>Best way to kickstart your day is with a cup of coffee</h2>
           <p>
             Frappuccino instant dripper skinny mug, steamed caffeine body milk
             plunger pot redeye. Decaffeinated as, robust espresso qui grinder
             and black strong.
           </p>
-          <button id="menu-btn">Our menu</button>
+          <button class="btn" id="menu-btn">Our menu</button>
         </div>
         <div id="about-pic">
-          <img src="../images/about-gif.gif" alt="coffe gif" />
+          <img src="../images/about-img.svg" alt="coffe gif" />
         </div>
       </section>
 
@@ -83,7 +70,7 @@
       <section id="menu">
         <div id="menu-header"><h3>Our Facility</h3></div>
         <div id="menu-items">
-          <div id="menu-coffee">
+          <div class="menu-variety" id="menu-coffee">
             <img src="../images/icon-coffee.png" alt="icon coffee" />
             <h5>Varieties of coffees</h5>
             <p>
@@ -92,13 +79,13 @@
             </p>
           </div>
 
-          <div id="menu-beans">
+          <div class="menu-variety" id="menu-beans">
             <img src="../images/icon-bean.png" alt="icon coffee beans" />
             <h5>Coffee beans</h5>
             <p>So sugar beans brewed to go aftertaste con panna at barista.</p>
           </div>
 
-          <div id="menu-sweets">
+          <div class="menu-variety" id="menu-sweets">
             <img
               src="../images/icon-sweets.png"
               alt="icon croissant and sweets"
@@ -110,7 +97,7 @@
             </p>
           </div>
 
-          <div id="menu-takeaway">
+          <div class="menu-variety" id="menu-takeaway">
             <img src="../images/icon-cup.png" alt="icon takeaway cup" />
             <h5>Ready to go coffee</h5>
             <p>
@@ -129,29 +116,29 @@
         </div>
 
         <div id="menu-pics">
-          <div id="item-1">
+          <div class="menu-items" id="item-1">
             <img src="../images/menu-1.png" alt="" />
             <h6>Lovers cup</h6>
           </div>
-          <div id="item-2">
+          <div class="menu-items" id="item-2">
             <img src="../images/menu-2.png" alt="" />
             <h6>Cappuccio</h6>
           </div>
-          <div id="item-3">
+          <div class="menu-items" id="item-3">
             <img src="../images/menu-3.png" alt="" />
             <h6>Mocha</h6>
           </div>
-          <div id="item-4">
+          <div class="menu-items" id="item-4">
             <img src="../images/menu-4.png" alt="" />
             <h6>Frappe</h6>
           </div>
-          <div id="item-5">
+          <div class="menu-items" id="item-5">
             <img src="../images/menu-5.png" alt="" />
             <h6>Americano</h6>
           </div>
-          <div id="item-6">
+          <div class="menu-items" id="item-6">
             <img src="../images/menu-6.png" alt="" />
-            <h6>Cafe Latte</h6>
+            <h6>Café Latte</h6>
           </div>
         </div>
       </section>
@@ -166,12 +153,14 @@
 
       <div id="gallery">
         <div id="gallery-header"><h3>Gallery</h3></div>
-        <img src="../images/gallery-1.jpg" alt="barista pouring milk" />
-        <img src="../images/gallery-2.jpg" alt="coffee shop" />
-        <img src="../images/gallery-4.jpg" alt="woman drinking coffee" />
-        <img src="../images/gallery-8.webp" alt="coffee and cake" />
-        <img src="../images/gallery-9.webp" alt="coffee bean" />
-        <img src="../images/gallery-6.webp" alt="coffee and sugarcubes" />
+        <div id="gallery-images">
+          <img src="../images/gallery-1.jpg" alt="barista pouring milk" />
+          <img src="../images/gallery-2.jpg" alt="coffee shop" />
+          <img src="../images/gallery-4.jpg" alt="woman drinking coffee" />
+          <img src="../images/gallery-8.webp" alt="coffee and cake" />
+          <img src="../images/gallery-9.webp" alt="coffee bean" />
+          <img src="../images/gallery-6.webp" alt="coffee and sugarcubes" />
+        </div>
       </div>
 
       <div class="spacer">
@@ -197,10 +186,10 @@
           </p>
           <!-- prev next buttons -->
           <div class="button-container">
-            <button class="prev-btn">
+            <button class="move-btn" id="prev-btn">
               <i class="fas fa-chevron-left"></i>
             </button>
-            <button class="next-btn">
+            <button class="move-btn" id="next-btn">
               <i class="fas fa-chevron-right"></i>
             </button>
           </div>
@@ -223,8 +212,15 @@
           <div id="booking-form">
             <form>
               <h4>Book a table</h4>
-              <input type="text" id="fname" name="fname" placeholder="Name" />
               <input
+                class="fInput"
+                type="text"
+                id="fname"
+                name="fname"
+                placeholder="Name"
+              />
+              <input
+                class="fInput"
                 type="tel"
                 id="fnumber"
                 name="fnumber"
@@ -232,6 +228,7 @@
                 placeholder="Phone"
               />
               <input
+                class="fInput"
                 type="number"
                 id="fguests"
                 name="fguests"
@@ -239,26 +236,31 @@
                 max="15"
                 placeholder="How many guests?"
               />
-              <input type="datetime-local" name="fdatetime" id="fdatetime" />
-              <input type="submit" value="Book" />
+              <input
+                class="fInput"
+                type="datetime-local"
+                name="fdatetime"
+                id="fdatetime"
+              />
+              <input class="btn" id="submit-btn" type="submit" value="Book" />
             </form>
           </div>
         </div>
         <div id="info">
           <div id="mail">
-            <img src="../images/icon-email.png" alt="email icon" />
+            <i class="fa fa-envelope"></i>
             <h6>Our email:</h6>
             <p>heaven@coffee.com</p>
           </div>
           <div id="open">
-            <img src="../images/icon-time.png" alt="clock icon" />
+            <i class="fas fa-clock"></i>
             <h6>Opening hours:</h6>
             <p>Mon-Fri: 7-20</p>
             <p>Sat: 09-21</p>
             <p>Sun: 12-18</p>
           </div>
           <div id="location">
-            <img src="../images/icon-location.png" alt="location icon" />'
+            <i class="fas fa-location-dot"></i>
             <h6>Shop location:</h6>
             <div class="mapouter">
               <div class="gmap_canvas">
@@ -292,7 +294,7 @@
             </div>
           </div>
           <div id="phone">
-            <img src="../images/icon-telephone.png" alt="phone icon" />
+            <i class="fas fa-phone"></i>
             <h6>Our number:</h6>
             <p>+47 123 45 678</p>
           </div>
@@ -306,5 +308,11 @@
         <a href="https://linktr.ee/vildsee">Vildsee</a>
       </p>
     </footer>
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"
+      integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
