--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
             <li><a href="#team">Team</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
+          <div id="menu-btn" class="fas fa-bars"></div>
         </div>
       </div>
     </nav>
@@ -40,7 +41,9 @@
             body. Ut eu, that skinny, french press, shop coffee mocha fair trade
             bar percolator shop.
           </p>
-          <button class="btn" id="about-btn">About us</button>
+          <button class="btn" id="about-btn">
+            <a href="#about">About us</a>
+          </button>
         </div>
       </header>
 
@@ -52,7 +55,9 @@
             plunger pot redeye. Decaffeinated as, robust espresso qui grinder
             and black strong.
           </p>
-          <button class="btn" id="menu-btn">Our menu</button>
+          <button class="btn" id="menu-btn">
+            <a href="#menu">Our menu</a>
+          </button>
         </div>
         <div id="about-pic">
           <img src="../images/about-img.svg" alt="coffe gif" />
@@ -247,54 +252,55 @@
           </div>
         </div>
         <div id="info">
-          <div id="mail">
-            <i class="fa fa-envelope"></i>
+          <div class="info-items" id="mail">
+            <i class="fa fa-envelope fa-4x info-icon"></i>
             <h6>Our email:</h6>
             <p>heaven@coffee.com</p>
           </div>
-          <div id="open">
-            <i class="fas fa-clock"></i>
+          <div class="info-items" id="open">
+            <i class="fas fa-clock fa-4x info-icon"></i>
             <h6>Opening hours:</h6>
             <p>Mon-Fri: 7-20</p>
             <p>Sat: 09-21</p>
             <p>Sun: 12-18</p>
           </div>
-          <div id="location">
-            <i class="fas fa-location-dot"></i>
+          <div class="info-items" id="location">
+            <i class="fas fa-compass fa-4x info-icon"></i>
             <h6>Shop location:</h6>
             <div class="mapouter">
               <div class="gmap_canvas">
                 <iframe
-                  width="286"
-                  height="271"
+                  width="150"
+                  height="150"
                   id="gmap_canvas"
-                  src="https://maps.google.com/maps?q=oslo%20central%20station&t=&z=15&ie=UTF8&iwloc=&output=embed"
+                  src="https://maps.google.com/maps?q=karl%20johans%20gate&t=&z=15&ie=UTF8&iwloc=&output=embed"
                   frameborder="0"
                   scrolling="no"
                   marginheight="0"
                   marginwidth="0"
                 ></iframe
-                ><a href="https://123movies-to.org"></a><br /><style>
+                ><style>
                   .mapouter {
                     position: relative;
                     text-align: right;
-                    height: 271px;
-                    width: 286px;
+                    height: 150px;
+                    width: 150px;
                   }</style
-                ><a href="https://www.embedgooglemap.net">embedgooglemap.net</a
+                ><a href="https://www.embedgooglemap.net"
+                  >google map code embed</a
                 ><style>
                   .gmap_canvas {
                     overflow: hidden;
                     background: none !important;
-                    height: 230px;
-                    width: 230px;
+                    height: 150px;
+                    width: 150px;
                   }
                 </style>
               </div>
             </div>
           </div>
-          <div id="phone">
-            <i class="fas fa-phone"></i>
+          <div class="info-items" id="phone">
+            <i class="fas fa-phone fa-4x info-icon"></i>
             <h6>Our number:</h6>
             <p>+47 123 45 678</p>
           </div>
@@ -302,11 +308,12 @@
       </section>
     </main>
     <footer>
-      <hr />
-      <p>
-        &copy; Copyright 2022 by
-        <a href="https://linktr.ee/vildsee">Vildsee</a>
-      </p>
+      <div id="footer-container">
+        <p>
+          &copy; Copyright 2022 by
+          <a href="https://linktr.ee/vildsee">Vildsee</a>
+        </p>
+      </div>
     </footer>
     <script
       defer
