--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,10 @@
     <nav>
       <div class="nav">
         <div id="logo">
-          <img src="../images/logo.png" alt="logo" />
+          <img
+            src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362321/coffee-shop/logo_xhblc8.png"
+            alt="logo"
+          />
         </div>
         <div class="navbar">
           <ul class="links">
@@ -27,13 +30,11 @@
             <li><a href="#team">Team</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
-          <div id="menu-btn" class="fas fa-bars"></div>
         </div>
       </div>
     </nav>
     <main>
       <header id="home">
-        <!-- <img src="../images/home-bg.jpg" alt="header-background" id="home-bg" /> -->
         <div class="home-text">
           <h1>Coffee Heaven</h1>
           <p>
@@ -60,13 +61,16 @@
           </button>
         </div>
         <div id="about-pic">
-          <img src="../images/about-img.svg" alt="coffe gif" />
+          <img
+            src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362324/coffee-shop/about-img_jk9229.svg"
+            alt="coffe gif"
+          />
         </div>
       </section>
 
       <div class="spacer">
         <img
-          src="../images/heading.png"
+          src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362319/coffee-shop/heading_an2ygv.png"
           alt="steaming-coffee-illustration"
           height="75px"
         />
@@ -76,7 +80,10 @@
         <div id="menu-header"><h3>Our Facility</h3></div>
         <div id="menu-items">
           <div class="menu-variety" id="menu-coffee">
-            <img src="../images/icon-coffee.png" alt="icon coffee" />
+            <img
+              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362319/coffee-shop/icon-coffee_yz1dya.png"
+              alt="icon coffee"
+            />
             <h5>Varieties of coffees</h5>
             <p>
               Instant, froth half and half french press affogato qui barista
@@ -85,14 +92,17 @@
           </div>
 
           <div class="menu-variety" id="menu-beans">
-            <img src="../images/icon-bean.png" alt="icon coffee beans" />
+            <img
+              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362320/coffee-shop/icon-bean_zse05h.png"
+              alt="icon coffee beans"
+            />
             <h5>Coffee beans</h5>
             <p>So sugar beans brewed to go aftertaste con panna at barista.</p>
           </div>
 
           <div class="menu-variety" id="menu-sweets">
             <img
-              src="../images/icon-sweets.png"
+              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362320/coffee-shop/icon-sweets_j58vaf.png"
               alt="icon croissant and sweets"
             />
             <h5>Breakfast and sweets</h5>
@@ -103,7 +113,10 @@
           </div>
 
           <div class="menu-variety" id="menu-takeaway">
-            <img src="../images/icon-cup.png" alt="icon takeaway cup" />
+            <img
+              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362320/coffee-shop/icon-cup_yapo5a.png"
+              alt="icon takeaway cup"
+            />
             <h5>Ready to go coffee</h5>
             <p>
               Lungo cappuccino cortado french press, cup aged café au lait et
@@ -114,7 +127,7 @@
 
         <div class="spacer">
           <img
-            src="../images/heading.png"
+            src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362319/coffee-shop/heading_an2ygv.png"
             alt="steaming-coffee-illustration"
             height="75px"
           />
@@ -122,27 +135,45 @@
 
         <div id="menu-pics">
           <div class="menu-items" id="item-1">
-            <img src="../images/menu-1.png" alt="" />
+            <img
+              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362321/coffee-shop/menu-1_v5mrhm.png"
+              alt=""
+            />
             <h6>Lovers cup</h6>
           </div>
           <div class="menu-items" id="item-2">
-            <img src="../images/menu-2.png" alt="" />
+            <img
+              src=".https://res.cloudinary.com/dxlainz2v/image/upload/v1668362321/coffee-shop/menu-2_pohro1.png"
+              alt=""
+            />
             <h6>Cappuccio</h6>
           </div>
           <div class="menu-items" id="item-3">
-            <img src="../images/menu-3.png" alt="" />
+            <img
+              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362323/coffee-shop/menu-3_lm0bsx.png"
+              alt=""
+            />
             <h6>Mocha</h6>
           </div>
           <div class="menu-items" id="item-4">
-            <img src="../images/menu-4.png" alt="" />
+            <img
+              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362321/coffee-shop/menu-4_yb0bth.png"
+              alt=""
+            />
             <h6>Frappe</h6>
           </div>
           <div class="menu-items" id="item-5">
-            <img src="../images/menu-5.png" alt="" />
+            <img
+              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362323/coffee-shop/menu-5_qs8okm.png"
+              alt=""
+            />
             <h6>Americano</h6>
           </div>
           <div class="menu-items" id="item-6">
-            <img src="../images/menu-6.png" alt="" />
+            <img
+              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362323/coffee-shop/menu-6_ui2s4d.png"
+              alt=""
+            />
             <h6>Café Latte</h6>
           </div>
         </div>
@@ -150,7 +181,7 @@
 
       <div class="spacer">
         <img
-          src="../images/heading.png"
+          src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362319/coffee-shop/heading_an2ygv.png"
           alt="steaming-coffee-illustration"
           height="75px"
         />
@@ -159,18 +190,36 @@
       <div id="gallery">
         <div id="gallery-header"><h3>Gallery</h3></div>
         <div id="gallery-images">
-          <img src="../images/gallery-1.jpg" alt="barista pouring milk" />
-          <img src="../images/gallery-2.jpg" alt="coffee shop" />
-          <img src="../images/gallery-4.jpg" alt="woman drinking coffee" />
-          <img src="../images/gallery-8.webp" alt="coffee and cake" />
-          <img src="../images/gallery-9.webp" alt="coffee bean" />
-          <img src="../images/gallery-6.webp" alt="coffee and sugarcubes" />
+          <img
+            src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362318/coffee-shop/gallery-1_zq0d31.jpg"
+            alt="barista pouring milk"
+          />
+          <img
+            src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362319/coffee-shop/gallery-2_hzz3dv.jpg"
+            alt="coffee shop"
+          />
+          <img
+            src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362319/coffee-shop/gallery-4_pthz07.jpg"
+            alt="woman drinking coffee"
+          />
+          <img
+            src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362319/coffee-shop/gallery-8_zryjot.webp"
+            alt="coffee and cake"
+          />
+          <img
+            src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362319/coffee-shop/gallery-9_fi1ak5.webp"
+            alt="coffee bean"
+          />
+          <img
+            src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362322/coffee-shop/gallery-6_rncm2c.webp"
+            alt="coffee and sugarcubes"
+          />
         </div>
       </div>
 
       <div class="spacer">
         <img
-          src="../images/heading.png"
+          src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362319/coffee-shop/heading_an2ygv.png"
           alt="steaming-coffee-illustration"
           height="75px"
         />
@@ -180,7 +229,10 @@
         <div id="team-header"><h3>Our Team</h3></div>
         <div id="team-container">
           <div id="team-img-container">
-            <img src="../images/our-team-1.jpg" alt="" />
+            <img
+              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362322/coffee-shop/our-team-1_xhcihp.jpg"
+              alt=""
+            />
           </div>
           <h4 id="name">John Doe</h4>
           <p id="job">Barista</p>
@@ -203,7 +255,7 @@
 
       <div class="spacer">
         <img
-          src="../images/heading.png"
+          src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362319/coffee-shop/heading_an2ygv.png"
           alt="steaming-coffee-illustration"
           height="75px"
         />
@@ -212,7 +264,10 @@
       <section id="contact">
         <div id="booking">
           <div id="booking-pic">
-            <img src="../images/contact-img.svg" alt="" />
+            <img
+              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362324/coffee-shop/contact-img_hngq1q.svg"
+              alt=""
+            />
           </div>
           <div id="booking-form">
             <form>
@@ -315,6 +370,7 @@
         </p>
       </div>
     </footer>
+    <script src="./js/app.js"></script>
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"
