--- a/src/index.html
+++ b/src/index.html
@@ -143,14 +143,14 @@
           </div>
           <div class="menu-items" id="item-2">
             <img
-              src=".https://res.cloudinary.com/dxlainz2v/image/upload/v1668362321/coffee-shop/menu-2_pohro1.png"
+              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362321/coffee-shop/menu-2_pohro1.png"
               alt=""
             />
-            <h6>Cappuccio</h6>
+            <h6>Cappuccino</h6>
           </div>
           <div class="menu-items" id="item-3">
             <img
-              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362323/coffee-shop/menu-3_lm0bsx.png"
+              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362321/coffee-shop/menu-2_pohro1.png"
               alt=""
             />
             <h6>Mocha</h6>
