--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
           </div>
           <div class="menu-items" id="item-3">
             <img
-              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362321/coffee-shop/menu-2_pohro1.png"
+              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362323/coffee-shop/menu-3_lm0bsx.png"
               alt=""
             />
             <h6>Mocha</h6>
@@ -236,7 +236,7 @@
           </div>
           <h4 id="name">John Doe</h4>
           <p id="job">Barista</p>
-          <p id="info">
+          <p id="description">
             Cat ipsum dolor sit amet, nya nya nyan. Make meme, make cute face
             carrying out surveillance on the neighbour's dog. Meow. Bite off
             human's toes chill on the couch table. Walk on a keyboard.
