--- a/src/index.html
+++ b/src/index.html
@@ -229,18 +229,11 @@
         <div id="team-header"><h3>Our Team</h3></div>
         <div id="team-container">
           <div id="team-img-container">
-            <img
-              src="https://res.cloudinary.com/dxlainz2v/image/upload/v1668362322/coffee-shop/our-team-1_xhcihp.jpg"
-              alt=""
-            />
+            <img src="" id="person-img" alt="" />
           </div>
-          <h4 id="name">John Doe</h4>
-          <p id="job">Barista</p>
-          <p id="description">
-            Cat ipsum dolor sit amet, nya nya nyan. Make meme, make cute face
-            carrying out surveillance on the neighbour's dog. Meow. Bite off
-            human's toes chill on the couch table. Walk on a keyboard.
-          </p>
+          <h4 id="person"></h4>
+          <p id="job"></p>
+          <p id="description"></p>
           <!-- prev next buttons -->
           <div class="button-container">
             <button class="move-btn" id="prev-btn">
