--- a/src/index.html
+++ b/src/index.html
@@ -313,44 +313,12 @@
           <div class="info-items" id="open">
             <i class="fas fa-clock fa-4x info-icon"></i>
             <h6>Opening hours:</h6>
-            <p>Mon-Fri: 7-20</p>
-            <p>Sat: 09-21</p>
-            <p>Sun: 12-18</p>
+            <p>Permanently closed</p>
           </div>
           <div class="info-items" id="location">
             <i class="fas fa-compass fa-4x info-icon"></i>
             <h6>Shop location:</h6>
-            <div class="mapouter">
-              <div class="gmap_canvas">
-                <iframe
-                  width="150"
-                  height="150"
-                  id="gmap_canvas"
-                  src="https://maps.google.com/maps?q=karl%20johans%20gate&t=&z=15&ie=UTF8&iwloc=&output=embed"
-                  frameborder="0"
-                  scrolling="no"
-                  marginheight="0"
-                  marginwidth="0"
-                ></iframe
-                ><style>
-                  .mapouter {
-                    position: relative;
-                    text-align: right;
-                    height: 150px;
-                    width: 150px;
-                  }</style
-                ><a href="https://www.embedgooglemap.net"
-                  >google map code embed</a
-                ><style>
-                  .gmap_canvas {
-                    overflow: hidden;
-                    background: none !important;
-                    height: 150px;
-                    width: 150px;
-                  }
-                </style>
-              </div>
-            </div>
+            <div class="mapouter"><div class="gmap_canvas"><iframe width="150" height="150" id="gmap_canvas" src="https://maps.google.com/maps?q=lyngen&t=&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org">123movies</a><br><style>.mapouter{position:relative;text-align:right;height:150px;width:150px;}</style><a href="https://www.embedgooglemap.net">embedgooglemap.net</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:150px;width:150px;}</style></div></div>
           </div>
         </div>
       </section>
